M2/C_v2/slurm-15887934.out
gcc -c -lm -pg -O0 -fopenmp -mavx -std=c99 -g -L/usr/lib64/openmpi/lib -lmpi_cxx -lmpi -I/usr/include/openmpi-x86_64 setup_final.c
setup_final.c: In function ‘generateLuminosity’:
setup_final.c:80:14: error: ‘myfirstN’ undeclared (first use in this function)
     for (i = myfirstN; i < mylastN; i+=blockSize) {
              ^
setup_final.c:80:14: note: each undeclared identifier is reported only once for each function it appears in
setup_final.c:80:28: error: ‘mylastN’ undeclared (first use in this function)
     for (i = myfirstN; i < mylastN; i+=blockSize) {
                            ^
make: *** [setup_final.o] Error 1
--------------------------------------------------------------------------
[[47005,1],1]: A high-performance Open MPI point-to-point messaging module
was unable to find any relevant network interfaces:

Module: OpenFabrics (openib)
  Host: smp-9-20

Another transport will be used instead, although this may result in
lower performance.
--------------------------------------------------------------------------
rank 0
size 2
rank 1
size 2
[smp-9-19.local:10491] 1 more process has sent help message help-mpi-btl-base.txt / btl:no-nics
[smp-9-19.local:10491] Set MCA parameter "orte_base_help_aggregate" to 0 to see all help / error messages

real	0m12.025s
user	0m11.227s
sys	0m0.098s
